# budget-app

./: .gitignore  README.md
.scripts/: reset_backend_data.sh
backend/: pyproject.toml  requirements.txt
backend/config/: api.py  settings.py  urls.py
backend/simplefin_app/: admin.py  models.py  simplefin.py
backend/simplefin_app/migrations/: 0001_initial.py  0002_account_transaction.py
backend/simplefin_app/routers/: accounts.py  simplefin.py  sync.py
backend/tests/: test_api.py  test_simplefin.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: AccountsList.jsx  ConnectBank.jsx
